--- a/src/2-react/2-homework-weather/theme/index.scss
+++ b/src/2-react/2-homework-weather/theme/index.scss
@@ -150,6 +150,10 @@ main {
     display: inline-flex;
     align-items: center;
     margin-bottom: 25px;
+
+    input {
+        opacity: 0;
+    }
 }
 
 .filter .checkbox:hover {
@@ -203,6 +207,12 @@ main {
     font-weight: 400;
     font-size: 16px;
     text-align: center;
+}
+
+.filter .custom-input-error {
+    font-family: 'Roboto', sans-serif;
+    color: rgb(117, 37, 37);
+    margin-bottom: 15px;
 }
 
 .filter button {
